IDE-3560 sf on com.liferay.ide.server.tomcat.core